# CapstoneBackend

./: .env.example  .gitignore  .pre-commit-config.yaml  Makefile  README.md  bash.exe.stackdump  docker-compose.yaml  pyproject.toml
Backend/capstone/: pom.xml
Backend/capstone/src/main/java/com/capstone/capstone/: CapstoneApplication.java
Backend/capstone/src/main/java/com/capstone/capstone/auth/controller/: AuthController.java
Backend/capstone/src/main/java/com/capstone/capstone/config/: SpringSecurity.java
Backend/capstone/src/main/java/com/capstone/capstone/load/: ProductSearchService.java  ProductSearchServiceImp.java
Backend/capstone/src/main/java/com/capstone/capstone/search/: ElasticSearchConfiguration.java  ElasticSearchController.java  ElasticSearchQuery.java  Product.java
Backend/capstone/src/main/java/com/capstone/capstone/security/: CustomUserDetailsService.java
Backend/capstone/src/main/resources/: application.properties
Client/: .gitignore  next.config.js  package-lock.json  package.json
Client/public/: aldi-products.json  edeka-products.json  products.json  rewe-products.json
Client/src/components/Product/: index.tsx
Client/src/components/inputs/: searchinput.tsx
Client/src/data/interfaces/: isearchresult.tsx
Client/src/pages/: index.tsx  login.tsx  reset-password.tsx
Client/src/pages/products/: [product].tsx
Client/src/styles/: Client - Shortcut.lnk
core/: manage.py
core/authentication/: models.py  views.py
core/core/: asgi.py  settings.py  urls.py
core/core/management/commands/: su_init.py
core/myapp/: admin.py  filters.py  models.py  urls.py  views.py
core/myapp/fixtures/: products.json
core/myapp/migrations/: 0001_initial.py
core/myapp/templates/: base.html  product-search.html  product_list.html
core/myapp/tests/: README.md  __init__.py  test_model.py  test_url.py  test_views.py
core/scripts/: README.md  mock_populate.py
docker/: Dockerfile
(+15 files in other folders)
