[tool.poetry]
name = "backend"
version = "0.1.0"
description = "User Management + API Gateway Backend"
authors = ["Mikhail Liamets <m.liamets@jacobs-university.de>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django-ninja = "^0.21.0"
psycopg2 = "^2.9.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
